# DEReK

./: .gitignore  AUTHORS  INSTALL.md  Makefile  README.md  configure  configure.ac  small_header.txt
ExLib/libxc/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure 2  libxc.bib
ExLib/libxc/cmake/: Makefile.in  xhost.cmake
ExLib/libxc/lib/: libxc.la  libxcf03.la  libxcf90.la
ExLib/libxc/lib/pkgconfig/: libxc.pc  libxcf03.pc  libxcf90.pc
ExLib/libxc/libxc-6.2.2/: CMakeLists.txt  configure.ac
ExLib/libxc/libxc-6.2.2/pkgconfig/: libxc.pc  libxcf03.pc  libxcf90.pc
ExLib/libxc/libxc-6.2.2/src/: Makefile.am  funcs_mgga.c  libxc_inc.f90  libxcf90.f90  references.c  references.h  util.c
ExLib/libxc/maple/: Makefile.in
ExLib/libxc/maple/gga_exc/: Makefile.in
ExLib/libxc/maple/gga_vxc/: Makefile.in
ExLib/libxc/maple/lda_exc/: Makefile.in
ExLib/libxc/pkgconfig/: Makefile.in
ExLib/libxc/pylibxc/: Makefile.in
ExLib/libxc/scripts/: Makefile.in
ExLib/libxc/src/: Makefile.in  funcs_key.c  libxcf03.f90  mgga_x_ktbm.c
ExLib/libxc/testsuite/: Makefile.in
Logos/.ipynb_checkpoints/: waves-checkpoint.ipynb
Misc/: header.txt
Source/: Doxyfile  GS.ipynb  Makefile  bands.f90  basis.f90  comms.mpi.f90  comms.serial.f90  constants.f90  density.f90  derek.f90  electronic.f90  fft.f90  fftw3_version.c  grids.f90  include_dependencies.mk  io.f90  license.f90  memory.f90  pot.f90  spectral.f90  state.f90  trace.f90  units.f90  utils.f90  wave.f90  xc.f90  xsf.f90
Source/DevTools/: AuthorManager.f90  Makefile  add_params.f90
Source/Tools/: derekMem.py
(+439 files in other folders)
